@@ -12,6 +12,9 @@ Core and Builtins
 
 - Issue #15027: The UTF-32 encoder is now 3x to 7x faster.
 
+- Issue #23290:  Optimize set_merge() for cases where the target is empty.
+  (Contributed by Serhiy Storchaka.)
+
 - Issue #20274: When calling a _sqlite.Connection, it now complains if passed
   any keyword arguments.  Previously it silently ignored them.
 
